# pac-man

./: .flake8  .gitignore  Makefile  README.md  TODO.md  config.json  display.py  highscores.json  pac-man.py  pyproject.toml  requirements.txt  test.json
project_management/: ISSUES_AND_SOLUTIONS.md  PROGRESS_TRACKING.md  PROJECT_OVERVIEW.md  RISK_ANALYSIS.md  TEAM_ORGANIZATION.md  TEST_PLAN.md  TIMELINE.md
src/: __init__.py  build-entry.py  display.py  game.py  pac-man.py
src/config/: __init__.py  models.py  parser.py
src/entities/: __init__.py  ghost.py  ia.py  player.py
src/highscore/: __init__.py  models.py  parser.py
src/scenes/: __init__.py  base.py  end_scene.py  menu.py  play.py
